--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,11 +20,7 @@
 
 <ion-content #ionContent (swipe)="tabServ.handleSwipe($event)" padding class="page-content home-page-content" [class.show-scrollbar]="showScrollbar" *ngIf="ud.isAppLoaded() && dataReady">
   <div *ngIf="ud.isAppLoaded() && ud.isHomePageReady() && dataReady; then homeDisplay; else homeClockDisplay"></div>
-  <ng-template #homeClockDisplay>
-    <!-- <div class="waiting-clock">
-      <clock class="clock-home"></clock>
-    </div> -->
-  </ng-template>
+  <ng-template #homeClockDisplay></ng-template>
   <ng-template #homeDisplay>
     <ion-card no-lines class="shift-summary">
       <ion-card-header class="home-card-header-payroll-period">
@@ -178,37 +174,5 @@
         <span class="data" >{{item[1] | translate}}</span>
       </div>
     </div>
-    <!-- <ion-grid center class="home-grid-key" *ngIf="dataReady && ud.isHomePageReady()">
-      <ion-row class="home-grid-row">
-        <ion-col col-1 class="home-grid-col1">T</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training' | translate}}</ion-col>
-        <ion-col col-1 offset-1 class="home-grid-col1">Q</ion-col><ion-col col-4 class="home-grid-col4">{{'key_travel' | translate}}</ion-col>
-      </ion-row>
-      <ion-row class="home-grid-row">
-        <ion-col col-1 class="home-grid-col1">M</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training_and_travel' | translate}}</ion-col>
-        <ion-col col-1 offset-1 class="home-grid-col1">S</ion-col><ion-col col-4 class="home-grid-col4">{{'key_standby_duncan' | translate}}</ion-col>
-      </ion-row>
-      <ion-row class="home-grid-row">
-        <ion-col col-1 class="home-grid-col1">E</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_sick_day_or_hours' | translate}}</ion-col>
-        <ion-col col-1 offset-1 class="home-grid-col1">H</ion-col><ion-col col-4 class="home-grid-col4">{{'key_holiday' | translate}}</ion-col>
-      </ion-row>
-    </ion-grid> -->
-    <!-- <ion-grid center class="home-grid-key" *ngIf="dataReady && ud.isHomePageReady()">
-      <ion-row class="home-grid-row">
-        <ion-col col-1 class="home-grid-col1">T</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training' | translate}}</ion-col>
-        <ion-col col-1 offset-1 class="home-grid-col1">Q</ion-col><ion-col col-4 class="home-grid-col4">{{'key_travel' | translate}}</ion-col>
-      </ion-row>
-      <ion-row class="home-grid-row">
-        <ion-col col-1 class="home-grid-col1">M</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training_and_travel' | translate}}</ion-col>
-        <ion-col col-1 offset-1 class="home-grid-col1">S</ion-col><ion-col col-4 class="home-grid-col4">{{'key_standby_duncan' | translate}}</ion-col>
-      </ion-row>
-      <ion-row class="home-grid-row">
-        <ion-col col-1 class="home-grid-col1">E</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_sick_day_or_hours' | translate}}</ion-col>
-        <ion-col col-1 offset-1 class="home-grid-col1">H</ion-col><ion-col col-4 class="home-grid-col4">{{'key_holiday' | translate}}</ion-col>
-      </ion-row>
-    </ion-grid> -->
   </ng-template>
 </ion-content>
-<!-- <div class="waiting-clock" *ngIf="ud.isAppLoaded() && !(dataReady && ud.isHomePageReady())" (tap)="toggleClock()">
-  <clock></clock>
-</div>
- -->
