Updated report history headers for Travel hours

--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -164,7 +164,8 @@
                               <td class="data" >{{report?.travel_location}}</td>
                             </tr>
                             <tr>
-                              <td class="label">{{'travel_hours' | translate}}</td>
+                              <!-- <td class="label">{{'travel_hours' | translate}}</td> -->
+                              <td class="label">{{'hours_header' | translate}}</td>
                               <td class="data" >{{report?.time}}</td>
                             </tr>
                           </ng-template>
