--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,8 +18,8 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content #ionContent (swipe)="tabServ.handleSwipe($event)" padding class="page-content home-page-content" [class.show-scrollbar]="showScrollbar" *ngIf="ud.isAppLoaded() && dataReady">
-  <div *ngIf="ud.isAppLoaded() && ud.isHomePageReady() && dataReady; then homeDisplay; else homeClockDisplay"></div>
+<ion-content #ionContent (swipe)="tabServ.handleSwipe($event)" padding class="page-content home-page-content" [class.show-scrollbar]="showScrollbar" *ngIf="dataReady">
+  <div *ngIf="dataReady; then homeDisplay; else homeClockDisplay"></div>
   <ng-template #homeClockDisplay></ng-template>
   <ng-template #homeDisplay>
     <ion-card no-lines class="shift-summary">
@@ -35,69 +35,69 @@
         </ion-list>
       </ion-card-header>
       <ion-list no-lines no-border class="home-card-body-list" *ngIf="period">
-        <ion-item class="ion-item-button-like home-shift" *ngFor="let shift of period.shifts; let i=index" (tap)="showShiftReports(shift)">
+        <ion-item class="ion-item-button-like home-shift" *ngFor="let shift of period?.shifts; let i=index" (tap)="showShiftReports(shift)">
           <span class="fake-row">
             <span class="fake-column fake-col-01">
               <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
             </span>
             <span class="fake-column fake-col-02">
               <span class="fake-wrapper" *ngIf="ud.isTechUpdated()">
-                <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
-                  <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+                <span class="fake-wrapper" *ngIf="!shift?.getShiftReportsStatus()?.workHours">
+                  <span class="shift-text" *ngIf="!shift?.getShiftReportsStatus()?.otherReportHours">
                     0 / {{tech.getShiftLength()}} Hrs.
                   </span>
-                  <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getShiftReportsStatus().code}} / {{shift.getShiftReportsStatus().code}}
+                  <span class="shift-text" *ngIf="shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getShiftReportsStatus()?.code}} / {{shift?.getShiftReportsStatus()?.code}}
                   </span>
                 </span>
-                <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
-                  <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getNormalHours()}} / {{tech.getShiftLength()}}  Hrs.
+                <span class="fake-wrapper" *ngIf="shift?.getShiftReportsStatus()?.workHours">
+                  <span class="shift-text" *ngIf="!shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getNormalHours()}} / {{tech?.getShiftLength()}}  Hrs.
                   </span>
-                  <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getShiftReportsStatus().code}} + {{shift.getNormalHours()}} Hrs.
+                  <span class="shift-text" *ngIf="shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getShiftReportsStatus()?.code}} + {{shift?.getNormalHours()}} Hrs.
                   </span>
                 </span>
               </span>
-              <span class="fake-wrapper" *ngIf="!ud.isTechUpdated() && shift.getShiftLength() === 'off'">
-                <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
-                  <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+              <span class="fake-wrapper" *ngIf="!ud.isTechUpdated() && shift?.getShiftLength() === 'off'">
+                <span class="fake-wrapper" *ngIf="!shift?.getShiftReportsStatus()?.workHours">
+                  <span class="shift-text" *ngIf="!shift?.getShiftReportsStatus()?.otherReportHours">
                     {{'off' | translate}}
                   </span>
-                  <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getShiftReportsStatus().code}} / {{shift.getShiftReportsStatus().code}}
+                  <span class="shift-text" *ngIf="shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getShiftReportsStatus()?.code}} / {{shift?.getShiftReportsStatus()?.code}}
                   </span>
                 </span>
-                <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
-                  <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+                <span class="fake-wrapper" *ngIf="shift?.getShiftReportsStatus()?.workHours">
+                  <span class="shift-text" *ngIf="!shift?.getShiftReportsStatus()?.otherReportHours">
                     {{shift.getNormalHours()}} / {{'off' | translate}}  Hrs.
                   </span>
-                  <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getShiftReportsStatus().code}} + {{shift.getNormalHours()}} Hrs.
+                  <span class="shift-text" *ngIf="shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getShiftReportsStatus()?.code}} + {{shift?.getNormalHours()}} Hrs.
                   </span>
                 </span>
               </span>
-              <span class="fake-wrapper" *ngIf="!ud.isTechUpdated() && shift.getShiftLength() !== 'off'">
-                <span class="fake-wrapper" *ngIf="!shift.getShiftReportsStatus().workHours">
-                  <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
+              <span class="fake-wrapper" *ngIf="!ud.isTechUpdated() && shift?.getShiftLength() !== 'off'">
+                <span class="fake-wrapper" *ngIf="!shift?.getShiftReportsStatus()?.workHours">
+                  <span class="shift-text" *ngIf="!shift?.getShiftReportsStatus()?.otherReportHours">
                     0 / {{shift.getShiftLength()}} Hrs.
                   </span>
-                  <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getShiftReportsStatus().code}} / {{shift.getShiftReportsStatus().code}} Hrs.
+                  <span class="shift-text" *ngIf="shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getShiftReportsStatus()?.code}} / {{shift?.getShiftReportsStatus()?.code}} Hrs.
                   </span>
                 </span>
-                <span class="fake-wrapper" *ngIf="shift.getShiftReportsStatus().workHours">
-                  <span class="shift-text" *ngIf="!shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getNormalHours()}} / {{shift.getShiftLength()}} Hrs.
+                <span class="fake-wrapper" *ngIf="shift?.getShiftReportsStatus()?.workHours">
+                  <span class="shift-text" *ngIf="!shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getNormalHours()}} / {{shift?.getShiftLength()}} Hrs.
                   </span>
-                  <span class="shift-text" *ngIf="shift.getShiftReportsStatus().otherReportHours">
-                    {{shift.getShiftReportsStatus().code}} + {{shift.getNormalHours()}}  Hrs.
+                  <span class="shift-text" *ngIf="shift?.getShiftReportsStatus()?.otherReportHours">
+                    {{shift?.getShiftReportsStatus()?.code}} + {{shift?.getNormalHours()}}  Hrs.
                   </span>
                 </span>
               </span>
             </span>
             <span class="fake-column fake-col-03">
-              <span class="normal-txt">{{shift.getStartTime().format("ddd, MMM D")}}</span>
+              <span class="normal-txt">{{shift?.getStartTime()?.format("ddd, MMM D")}}</span>
             </span>
             <span class="fake-column fake-col-04">
               <ion-icon item-end class="chk-box-icon" [ngClass]="shift.getShiftStatus()" [innerHTML]="getCheckboxSVG(shift) | safe: 'html'" (tap)="possibleSound(shift)"></ion-icon>
@@ -108,66 +108,66 @@
         <ion-list-header class="home-hours-submitted">
           {{"home_hours_submitted_for_payroll_period" | translate}}:
           <ion-note item-end>
-            {{ period.getNormalHours() }}
+            {{ period?.getNormalHours() }}
           </ion-note>
         </ion-list-header>
         <ion-list-header class="home-hours-extended">
           {{"premium_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getBonusHours() }}
+            {{ period?.getBonusHours() }}
           </ion-note>
         </ion-list-header>
         <ion-list-header class="home-hours-training">
           {{"training_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getTrainingHours() }}
+            {{ period?.getTrainingHours() }}
           </ion-note>
         </ion-list-header>
         <ion-list-header class="home-hours-travel">
           {{"travel_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getTravelHours() }}
+            {{ period?.getTravelHours() }}
           </ion-note>
         </ion-list-header>
-        <ion-list-header class="home-hours-other" *ngIf="period.getSpecialHours('Standby').hours">
+        <ion-list-header class="home-hours-other" *ngIf="period?.getSpecialHours('Standby')?.hours">
           {{"standby_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getSpecialHours('Standby').hours }}
+            {{ period?.getSpecialHours('Standby')?.hours }}
           </ion-note>
         </ion-list-header>
-        <ion-list-header class="home-hours-other" *ngIf="period.getSpecialHours('Standby: HB Duncan').hours">
+        <ion-list-header class="home-hours-other" *ngIf="period?.getSpecialHours('Standby: HB Duncan')?.hours">
           {{"standby_hb_duncan_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getSpecialHours('Standby: HB Duncan').hours }}
+            {{ period?.getSpecialHours('Standby: HB Duncan')?.hours }}
           </ion-note>
         </ion-list-header>
-        <ion-list-header class="home-hours-other" *ngIf="period.getSpecialHours('Sick').hours">
+        <ion-list-header class="home-hours-other" *ngIf="period?.getSpecialHours('Sick')?.hours">
           {{"sick_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getSpecialHours('Sick').hours }}
+            {{ period?.getSpecialHours('Sick')?.hours }}
           </ion-note>
         </ion-list-header>
-        <ion-list-header class="home-hours-other" *ngIf="period.getSpecialHours('Vacation').hours">
+        <ion-list-header class="home-hours-other" *ngIf="period?.getSpecialHours('Vacation')?.hours">
           {{"vacation_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getSpecialHours('Vacation').hours }}
+            {{ period?.getSpecialHours('Vacation')?.hours }}
           </ion-note>
         </ion-list-header>
-        <ion-list-header class="home-hours-other" *ngIf="period.getSpecialHours('Holiday').hours">
+        <ion-list-header class="home-hours-other" *ngIf="period?.getSpecialHours('Holiday')?.hours">
           {{"holiday_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getSpecialHours('Holiday').hours }}
+            {{ period?.getSpecialHours('Holiday')?.hours }}
           </ion-note>
         </ion-list-header>
         <ion-list-header class="home-hours-total">
           {{"total_payroll_hours" | translate}} :
           <ion-note item-end>
-            {{ period.getTotalHours() }}
+            {{ period?.getTotalHours() }}
           </ion-note>
         </ion-list-header>
       </ion-list>
     </ion-card>
-    <p class="home-grid-key-caption" *ngIf="dataReady && ud.isHomePageReady()">{{'letter_code' | translate}}</p>
+    <p class="home-grid-key-caption" *ngIf="dataReady">{{'letter_code' | translate}}</p>
     <div class="home-letter-legend">
       <div class="home-legend-button" *ngFor="let item of legend" (tap)="legendClick(item, $event)">
         <span class="label">{{item[0]}}</span>
