Updates to remove stuff and fix some bugs
Removd pouchdb-all-dbs for causing startup errors (maybe). Removed ion-digit-keyboard because it was never used. Also changd PouchDB tests and adapters.

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -66,5 +66,5 @@
     </ion-item-group>
   </ion-list>
 </ion-content>
-<ion-digit-keyboard (buttonClick)="onKeyboardButtonClick()" [visible]="keysetup.visible" [width]="keysetup.width" [swipeToHide]="keysetup.swipeToHide"></ion-digit-keyboard>
+<!-- <ion-digit-keyboard (buttonClick)="onKeyboardButtonClick()" [visible]="keysetup.visible" [width]="keysetup.width" [swipeToHide]="keysetup.swipeToHide"></ion-digit-keyboard> -->
 <!-- <onsite-tabs></onsite-tabs> -->
